@@ -1,3 +1,12 @@
+2008-12-11  Jakub Jelinek  <jakub@redhat.com>
+
+	PR c++/37582
+	* include/bits/cpp_type_traits.h (struct __traitand): New.
+	* include/c_global/cmath (std::atan2, std::pow): Use __traitand
+	instead of && as first argument to __enable_if.
+	* include/c_std/cmath (std::atan2): Likewise.
+	* testsuite/26_numerics/headers/cmath/37582.cc: New.
+
 2008-12-04  Janis Johnson  <janis187@us.ibm.com>
 
 	Backport from mainline:
